My first changes

--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <title>Tasbeh</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
     <main>
         <div class="container">
+            <a href="https://www.youtube.com/channel/UCPPIjmkbaopLMucC2fMs4fg">
+                <i class="fab fa-youtube"></i>
+            </a>
             <h1>Muslim Tasbih</h1>
+            <div class="pulsing"></div>
             <span id="value">0</span>
             <div class="button-container">
                 <button class="btn btn dicrease">dicsrease</button>
